<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">



    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/welcome"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/username"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="center"
        android:onClick="backToMain"
        android:text="@string/backButton" />



</LinearLayout>
</ScrollView>

